syntax = "proto3";

package order;

service OrderService {
  rpc PlaceOrder (PlaceOrderRequest) returns (PlaceOrderResponse) {}
  rpc GetOrder (GetOrderRequest) returns (Order) {}
  rpc GetAllOrders (GetAllOrdersRequest) returns (GetAllOrdersResponse) {}
  rpc UpdateOrder (UpdateOrderRequest) returns (UpdateOrderResponse) {}
  rpc CancelOrder (CancelOrderRequest) returns (CancelOrderResponse) {}
}

message PlaceOrderRequest {
  float totalAmount = 1;
  repeated OrderItem orderItems = 2;
}

message PlaceOrderResponse {
  string message = 1;
  int32 orderId = 2;
}

message GetOrderRequest {
  int32 id = 1;
}

message Order {
  int32 id = 1;
  int32 userId = 2;
  string orderDate = 3;
  float totalAmount = 4;
  repeated OrderItem orderItems = 5;
}

message GetAllOrdersRequest {} // Empty message as we don't need any input for this operation

message GetAllOrdersResponse {
  repeated Order orders = 1;
}

message UpdateOrderRequest {
  int32 id = 1;
  float totalAmount = 2;
  repeated OrderItem orderItems = 3;
}

message UpdateOrderResponse {
  string message = 1;
}

message CancelOrderRequest {
  int32 id = 1;
}

message CancelOrderResponse {
  string message = 1;
}

message OrderItem {
  int32 id = 1;
  int32 orderId = 2;
  int32 productId = 3;
  int32 quantity = 4;
  float price = 5;
}
